[metadata]
name = chowkidar-strawberry
version = 0.1.7
description = All-in-One JWT Authentication plugin for Strawberry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/traboda/chowkidar
author = Ashwin Shenoy
author_email = ashwin@traboda.com
maintainer = Ashwin Shenoy
maintainer_email = ashwin@traboda.com
license = GNU-GPL-V3
install_requires =
    Django>=3.0.0
    PyJWT==2.5.0
    django-ipware==3.0.2
    strawberry-graphql>=0.100.0
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0

[options]
include_package_data = true
packages = find:
zip_safe = False
